# airframe

./: .clinerules  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  AIRFRAME_BRAIN_HANDBOOK.md  AIRFRAME_CLI_INTEGRATION_PLAN.md  CERT.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LAMBDA_AGENT_BRIEF.md  LAMBDA_SESSION_BRIEFING.md  LAMBDA_SESSION_DEBRIEF.md  README.md  RELEASE_CHECKLIST.md  RELEASE_STATUS.md  RUN_ACCOUNTING.md  SPIKE_AI_STATE_PILOT.md  SPONSORS.md  V2_RELEASE_TRIAGE.md  VISION_OPTION_A_SPIKE.md  all_sessions_export.json  cline.md  compare_qwen3_0_6b.json  fc_qwen3_0_6b.json  fc_qwen3_4b_v2.json  fc_qwen3_4b_v3.json  fc_qwen3_4b_v4.json  golden_ref.json  gpu_qwen3_0_6b.json  opencode.json  qwen3_0_6b_cpu_ref.json  sessions.json  skills-lock.json  workspace_continuity.md  xaa  xab
.beads/: issues.jsonl
.github/: copilot-instructions.md
.kiro/: cloud-work-mode.md
.opencode/: prime-enforcement.md
artifacts/: airframe_branch_fresh.txt  airframe_branches_all.txt  airframe_graph_fresh.txt  airframe_head.txt  airframe_head_graph.txt  airframe_key_commits.txt  airframe_mergebase_spike.txt  airframe_server_gitlog.txt  airframe_server_keylines.txt  airframe_status_branch.txt  b4_candidate.txt  battery_int4_20260530.txt  battery_int4_20260530_2156.txt  battery_int4_20260530_2158.txt  battery_int4_20260530_2202.txt  battery_int4_20260530_2207.txt  battery_int4_20260530_2229.txt  battery_results.md  cmp_airframe_backend_symbols.txt  cmp_airframe_server_symbols.txt  cmp_kv_diffstat.txt  cmp_libshimmy_backend_symbols.txt  cmp_libshimmy_server_symbols.txt  cmp_pipeline_diffstat.txt  cmp_server_diffstat.txt  cmp_shift_diffstat.txt  fixed_16384.json  fixed_32768.json  fixed_4096.json  fixed_8192.json  frontier_4096_idx2047.json  frontier_4096_idx2048.json  frontier_helical_cpuhelical_step1928.json  frontier_helical_cpuhelical_step1958.json  frontier_helical_postshift_step1928.json  frontier_helical_postshift_step1958.json  frontier_helical_shift_step1927.json  frontier_smoke.json  frontier_smoke_2048.json  frontier_yarn_16384.json  (+110 more)
crates/airframe_observe/: Cargo.toml
crates/airframe_observe/src/: facts.rs  isf.rs  lib.rs  observer.rs  observers.rs  output.rs  plan.rs  quant_formula.rs  session.rs  vault.rs
crates/airframe_observe/src/internal/: mod.rs  tdr.rs
crates/candle_probe/: Cargo.toml
crates/candle_probe/src/: main.rs
crates/console/: Cargo.toml  bash.exe.stackdump  compile_errors.txt  compile_errors2.txt  compile_errors3.txt  compile_errors4.txt  compile_errors5.txt  fix_image.patch
crates/console/src/: config.rs  context.rs  history.rs  lib.rs  main.rs  plugins.rs  session_store.rs
crates/console/src/adapters/: http_adapter.rs  local_adapter.rs  mod.rs  shimmy_adapter.rs  ws_adapter.rs
crates/console/src/commands/: chat.rs  model.rs
crates/console/src/discovery/: mod.rs
crates/console/src/license/: mod.rs  validator.rs
crates/console/src/tools/: analysis_tests.rs  docs.rs  git.rs  image.rs  mod.rs
crates/console/src/websocket/: mod.rs
crates/console/tests/: integration_tests.rs  model_helpers.rs  websocket_chat_tests.rs
crates/libfse/: AUDIT_INFO.md  CHANGELOG.md  Cargo.toml  README.md  STRATEGY.md
crates/libfse/benches/: compare_scanners.rs  damage_assessment.rs
crates/libfse/docs/: ARCHITECT_FSE_METRICS.md  COMMERCIAL_VALUE_PROP.md  FAIL_FAST_ENTANGLEMENT.md  FAIL_FAST_EXPERIMENT_RESULT.md  FAIL_FAST_FINAL_REPORT.md  FAIL_FAST_MAXPROB_RESULT.md  FAIL_FAST_METRICS_SUITE.md  FAIL_FAST_REDO_RESULT.md  FAIL_FAST_VARIANCE_RESULT.md  INVARIANT_REDO_SWITCH.md  NAMING_CONVENTION_MILITARY.md  PROMPT_FOR_LIBFSE_GENERATION.md  REDO_SWITCH_ANALYSIS.md  UNIQUE_VALUE_PROPOSITION_METRICS.md  V4-RELEASE-MANIFEST.txt  V4_PERFORMANCE_ANALYSIS.md
crates/libfse/examples/: fail_fast_entropy.rs  policy_scan.rs
crates/libfse/src/: lib.rs  metrics.rs  scanner.rs  store.rs  tests_integration.rs
crates/libfse/tests/: determinism.rs  differential.rs  no_alloc.rs
docs/: BUILD_PLAN.md  REFACTOR-PLAN.md  SHIMMY_VISION_SESSION_BRIEF.md  airframe-current-stack-audit.md  airframe-optimization-checklist.md  airframe-top-to-bottom-scrub.md  architecture-map.md  bead-b0-dispatch-map.md  beads-fabric-core.md  beads-mastery-report.md  bindless-fse-throughput-architecture.md  card-system-architecture.md  card-system-fail-fast-experiments.md  card-system-findings.md  clippy-action-plan-executable.md  clippy-consolidation-audit.md  clippy-refactor-complete-plan.md  clippy-warnings-remediation-plan.md  ffn-norm-regression-analysis.md  helical-shift-validation-plan.md  llama-template-family-decision-tree-spike.md  local_dev_platform_spike.md  math-pack-spike-prompt.md  model-routing-unified-plan.md  openclaw-local-provider-runbook.md  opencode-tooling-test-plan.md  opencode-tooling-test-results.md  quant-dispatch-architecture-review-response.md  quant-dispatch-architecture-review.md  shimmy-airframe-integration-checklist.md  shimmy-airframe-launch-envelope.md  shimmy-airframe-release-strategy.md  shimmy-airframe-seam-map.md  spike-206-wgpu-2gb-buffer-cap.md  spike-lcm-rlm.md  spike-pageindex.md  spike-turboquant.md  spike-wgsl-turboquant-port.md  starcoder2-layer-comparison.md  test-plan-a100.md  (+8 more)
examples/: probe_gpu.rs  simple_flight.rs  test_inference_decode.rs  tok_probe.rs
fixtures/: control_plane_route_manifest.json  oracle_22layer_hello.csv
scripts/: battery_test.sh  card_ab_test.ps1  card_fail_fast_experiment.ps1  card_smoke_check.ps1  cert_check.py  cert_model.sh  clean_bandaids.py  export_code_to_md.sh  int4_soak_test.ps1  isf_run_log.py  llama_formula_side_by_side.py  long_prompt_soak_test.py  long_story_check.ps1  math_battery.py  math_entropy_probe.py  model_route_check_matrix.sh  model_smoke_matrix.sh  model_smoke_test.ps1  model_smoke_test.sh  needle_bench.py  openclaw_provider_smoke_test.ps1  perf_baseline.ps1  phi_smoke_formula.sh  prompt_mode_formula_probe.sh  rope_ladder_test.ps1  rope_ladder_test.sh  run_humaneval_airframe.py  run_humaneval_llamacpp.py  scan_gguf_models.py  short_story_sha_check.ps1  template_health_check.py  (+6 more)
(+350 files in other folders)
