[workspace]
# Console CLI is deferred — released separately on its own timeline.
# Only the GPU engine and FSE library ship with airframe v0.x releases.
# When console is ready: add "crates/console" back to members and bump the minor version.
members = ["crates/libfse"]

[package]
name = "airframe"
version = "0.1.0"
edition = "2021"
description = "FP32-first inference core for Llama-family models. Pure Rust WebGPU engine."
license = "MIT"
repository = "https://github.com/Michael-A-Kuykendall/airframe"
homepage = "https://github.com/Michael-A-Kuykendall/airframe"
readme = "README.md"
authors = ["Michael A. Kuykendall"]
keywords = ["llm", "inference", "llama", "gguf", "wgpu"]
categories = ["science", "simulation"]
publish = true

[dependencies]
# Core dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
memmap2 = "0.9"
half = "2.4"
shimmytok = "0.7.1"
chrono = { version = "0.4.43", features = ["serde"] }
wgpu = "27.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
libfse = { path = "crates/libfse", version = "0.1.1" }
schoolmarm = "0.1.1"
sha2 = "0.10"
aho-corasick = { version = "1.1", features = ["std"] }
base64 = "0.22"
png = "0.17"

[dev-dependencies]
sha2 = "0.10"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }

[[bin]]
name = "layer_dump_gpu"
path = "src/bin/layer_dump_gpu.rs"
