[workspace]
# Console CLI is deferred — released separately on its own timeline.
# Only the GPU engine and FSE library ship with airframe v0.x releases.
# When console is ready: add "crates/console" back to members and bump the minor version.
# candle_probe is a cross-validation tool — not published, builds separately.
members = ["crates/libfse"]
# Private internal tools — not part of CI:
#   crates/candle_probe     — cross-validation spike, depends on candle (heavy)
#   crates/airframe_observe — FSE observation layer, depends on private d0-engine

[package]
name = "airframe"
version = "0.2.5"
edition = "2021"
description = "Pure-Rust WebGPU inference engine for GGUF models. No C++ toolchain, no llama.cpp. Runs on NVIDIA, AMD, Intel, and Apple Silicon via wgpu."
license = "MIT"
repository = "https://github.com/Michael-A-Kuykendall/airframe"
homepage = "https://github.com/Michael-A-Kuykendall/airframe"
readme = "README.md"
authors = ["Michael A. Kuykendall <michaelallenkuykendall@gmail.com>"]
keywords = ["llm", "inference", "gguf", "wgpu", "webgpu"]
categories = ["science", "simulation", "graphics"]
publish = true

[dependencies]
# Core dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
memmap2 = "0.9"
half = "2.4"
shimmytok = "0.7.1"
chrono = { version = "0.4.43", features = ["serde"] }
wgpu = "27.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
libfse = { path = "crates/libfse", version = "0.1.3" }
schoolmarm = "0.1.1"
sha2 = "0.10"
aho-corasick = { version = "1.1", features = ["std"] }
shimmyjinja = { version = "0.5.0" }

# Optional: ISF (Inference Saturation Fabric) — depends on private d0-engine.
# Enable with --features isf. Not published to crates.io.
airframe-observe = { path = "crates/airframe_observe", optional = true }

[features]
isf = ["dep:airframe-observe"]

[dev-dependencies]
sha2 = "0.10"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }

[[bin]]
name = "layer_dump_gpu"
path = "src/bin/layer_dump_gpu.rs"

[[bin]]
name = "vault_seed"
path = "src/bin/vault_seed.rs"
