[package]
name = "candle_probe"
version = "0.1.0"
edition = "2021"
description = "Candle-based cross-validation probe for the Golden Reference Vault. Part of the FSE Inference Observation layer."
publish = false

# Patent Notice: This crate is part of the Fused Semantic Execution (FSE)
# Inference Observation architecture. The selector-first, single-pass
# observation model is covered by a pending US patent by Michael A. Kuykendall.
# All rights reserved. Contact: michaelallenkuykendall@gmail.com

# Candle CPU-only — no CUDA, no Metal, no wgpu
[dependencies]
candle-core        = { version = "0.10.2", default-features = false }
candle-transformers = { version = "0.10.2", default-features = false }
candle-nn          = { version = "0.10.2", default-features = false }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
chrono             = { version = "0.4.43", features = ["serde"] }

[[bin]]
name = "candle_probe"
path = "src/main.rs"
