[package]
name = "shimmy-console"
version = "0.1.0"
edition = "2021"
description = "Shimmy console CLI and core orchestrator"

[workspace]
# Exclude from parent workspace — console is a standalone crate on its own timeline

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.29", features = ["bundled"] }
parking_lot = "0.12"
dialoguer = "0.11"
colored = "2.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
toml = "0.8"
dirs = "5.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0.69"
chrono = "0.4.44"
base64 = { version = "0.22.1", features = ["alloc"] }
infer = "0.19.0"
image = "0.25.9"

# Shimmy ecosystem deps — used for local inference adapter and tokenization
airframe = { path = "../..", version = "0.2.2" }
shimmytok = "0.7.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
