[package]
name = "libfse"
version = "0.1.2"
edition = "2021"
description = "Fused Semantic Execution: fail-closed policy engine with O(1)-in-rule-count scanning, zero-allocation hot path, and guaranteed enforcement semantics."
publish = true
license = "MIT"
repository = "https://github.com/Michael-A-Kuykendall/airframe"
homepage = "https://github.com/Michael-A-Kuykendall/airframe"
readme = "README.md"
keywords = ["policy", "security", "scanner", "dfa", "inference"]
categories = ["algorithms", "data-structures", "text-processing"]

[dependencies]
# We use the standard crate for the graph compilation algorithms
# In Phase 2: We may vendor this to modify the graph layout directly
aho-corasick = { version = "1.1", features = ["std"] }
# log = "0.4"       # Removed: Audited as unused
# thiserror = "1.0" # Removed: Audited as unused
# bitvec = "1.0"    # Removed: Internalized via Vec<u64>


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compare_scanners"
harness = false

[[bench]]
name = "damage_assessment"
harness = false

[lib]
name = "libfse"
path = "src/lib.rs"
